--- a/Farm Website Template/style.css
+++ b/Farm Website Template/style.css
@@ -402,6 +402,7 @@ button:hover i {
     justify-content: center;
     align-items: center;
     text-align: center;
+    /* padding: 0 100px; */
     background: var(--bg-color);
 }
 .featured p {
@@ -409,7 +410,7 @@ button:hover i {
 }
 /* SWIPER */
 .swiper {
-    width: 750px;
+    width: 850px;
     height: 385px;
     margin: 10px;
     justify-content: center;
@@ -676,6 +677,13 @@ button:hover i {
         top: -120px;
         scale: 0.7;
     }
+    .swiper { 
+        width: 100%;
+        max-height: 100%;
+        scale: 0.9;
+        padding-bottom:50px; 
+        padding-right: 20px; 
+    } 
     .swiper .swiper-slide {
         width: 200px;
     }
@@ -690,9 +698,10 @@ button:hover i {
     .header img {
         scale: 0.5;
     }
-    .swiper {
+    .swiper { 
+        width: 100%;
         scale: 0.8;
-    }
+    } 
     .signup img {
         scale: 0.7;
         transform: translate(-20px, 0);
@@ -702,8 +711,29 @@ button:hover i {
     }
 }
 @media screen and (max-width: 643px) {
+    .featured{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .featured h2{
+        font-size: 3.8rem;
+    }
     .swiper {
-        scale: 0.7;
+        width: 100%;
+        height: 60vh;
+        scale: 1;
+        margin: 0;
+        padding: 20px;
+    }
+    .swiper-slide {
+        width: 220px;
+        height: 320px;
+    }
+
+    .swiper i{
+        transform: translate(40px, 10px);
     }
     .signup img {
         scale: 0.6;
@@ -731,8 +761,13 @@ button:hover i {
         display: flex;
         flex-direction: column;
     }
-    .swiper  {
-        scale: 0.5;
+    .swiper {
+        scale: 0.9;
+        padding: 10px;
+    }
+    .swiper-slide {
+        width: 200px;
+        height: 300px;
     }
     .signup form {
         padding-left: 8px;
@@ -747,9 +782,37 @@ button:hover i {
         scale: 0.75;
         transform: translate(115vw, 120vh);
     }
+     .featured h2 {
+        font-size: 2rem; /* Further reduced */
+    }
     .swiper {
-        scale: 0.45;
-        
+        width: 100%;
+        scale: 1;
+        padding: 0;
+    }
+    .swiper-slide {
+        width: 160px;
+        height: 240px;
+        margin: 0 5px;
+    }
+    .swiper-slide img {
+        width: 120px; 
+        transform: translateY(-90px); 
+    }
+    .swiper-slide img[src="assets/oranges.png"] {
+        width: 100px;
+        transform: translateY(-100px);
+    }
+    .swiper-slide img[src="assets/watermelon.png"] {
+        width: 90px;
+        transform: translateY(-140px);
+    }
+    .swiper-slide img[src="assets/tomato.png"] {
+        width: 90px;
+        transform: translateY(-120px);
+    }
+    .swiper i {
+        transform: translate(30px, 10px); 
     }
     .signup {
         width: 70%;
